# condominium_ve

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
condominium_ve/: api.py  hooks.py  modules.txt  task.py  uninstall.py
condominium_ve/condominium_ve/condominium_ve_dashboard/condominio/: condominio.json
condominium_ve/condominium_ve/custom/: payment_entry.json  payment_entry_deduction.json  payment_entry_reference.json
condominium_ve/condominium_ve/dashboard_chart/cxc_condominio/: cxc_condominio.json
condominium_ve/condominium_ve/dashboard_chart/disponibilida_2/: disponibilida_2.json
condominium_ve/config/: desktop.py  docs.py
condominium_ve/domains/: condominium_ve.py
condominium_ve/fixtures/: cf_condo_purchase_invoice.json  cf_sales_invoice_gc_condo.json  cgf_apply_condo_purchase_invoice.json  custom_field.json  customer_group.json  domain.json  email_template.json  formato_email_condominio.json  group_condo.json  heading_print.json  print_format.json  print_heading.json  report_bro.json  role.json  roles_condo.json  variables_entorno.json
condominium_ve/fixtures_old/: cf_is_for_condo.json
condominium_ve/templates/includes/: consultas.js
condominium_ve/translations/: es-VE.csv
condominium_ve/utils/: utils.py
condominium_ve/www/: consultas.html  consultas.py
reports/: Entrada de Pago Detallada.json  Entrada de pago Resumido.json  Gastos Comunes del Condominio old.json  Prueba Gastos Comunes de Condominio old.json  Relacion de Gastos Old.json  Relacion de Gastos.json  Reporte Gastos Comunes.json
(+108 files in other folders)
