[project]
name = "condominium_ve"
authors = [
    { name = "Datacomm", email = "oficinadatacomm@gmail.com"}
]
description = "Condominium Ve"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["numpy~=1.25.0", "flit_core"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
numpy = "~=1.25.0"
